# turborepo-cdktf-microservices-app

./: .eslintrc.js  .npmrc  .vercelignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/services/csv-to-pdf-microservice/: .gitignore  lambda.py  package.json  pyproject.toml
backend/services/csv-to-pdf-microservice/src/csv_to_pdf_microservice/: __init__.py  dev.py  service.py
bff/services/aggregation/: package.json  tsconfig.build.json
bff/services/aggregation/src/: app.module.ts  bootstrap.ts  helpers.ts  lambda.ts  main.ts
bff/services/aggregation/src/csv2pdf/: csv2pdf.controller.ts  csv2pdf.module.ts  csv2pdf.service.ts
bff/services/aggregation/util/: esbuildOptions.d.ts  esbuildOptions.js  esbuildOptions.ts
frontend/web/: next.config.js  package.json  tailwind.config.js
frontend/web/pages/: index.tsx
frontend/web/src/components/: Footer.tsx  Header.tsx  Layout.tsx
frontend/web/src/components/csv2pdf/: Hero.tsx  Info.tsx  Process.tsx  Upload.tsx
frontend/web/src/pages/: _app.tsx  _document.tsx  index.tsx
frontend/web/src/styles/: globals.css
frontend/web/src/util/: helpers.ts
infrastructure/cdktf/: cdktf.json  help  main.ts  package.json
infrastructure/cdktf/lib/lambda/: asset-util.ts  function.ts
