[tool.poetry]
name = "csv_to_pdf_microservice"
version = "0.1.0"
description = ""
authors = ["Sinan Bekar <sinanbekar.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kombu = "^5.2.4"
csv2pdf = "^0.1.4"
numpy = "^1.23.2"

[tool.poetry.scripts]
start="csv_to_pdf_microservice.dev:start"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
